--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+* {
+	margin: 0%;
+	padding: 0%;
+}
+.header {
+	height: 250px;
+	background-color: #241468;
+	padding: 4%;
+}
+.name {
+	color: white;
+	font-size: 60px;
+	font-weight: 900;
+	margin-left: auto;
+	margin-right: 200px;
+}
+.name:hover{
+	color: white;
+}
+@media (max-width: 1250px) {
+	.name {
+		display: none;
+	}
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.inputBox-searchBtn {
+	height: 50px;
+	border: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.searchBtn {
+	font-size: 20px;
+	font-weight: 900;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.main {
+	height: auto;
 }
-
-.App-link {
-  color: #61dafb;
+.footer {
+	position: fixed;
+	background-color: #241468;
+	font-family: Georgia, 'Times New Roman', Times, serif;
+	width: 100%;
+	bottom: 0%;
+	height: auto;
+	color: white;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.icons{
+	margin: 30px 50px;
 }
