--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 	padding: 4%;
 }
 .name {
-	color: white;
+	color: #f64c57;
 	font-size: 60px;
 	font-weight: 900;
 	margin-left: auto;
@@ -41,8 +41,19 @@
 	width: 100%;
 	bottom: 0%;
 	height: auto;
-	color: white;
 }
 .icons{
+	color: #f64c57;
 	margin: 30px 50px;
+}
+
+.cards{
+	background-color: #790252;
+	min-width: 250px;
+	max-width: 300px;
+	min-height: 300px;
+	color: white;
+	margin: auto;
+	margin-top: 100px;
+	
 }
