--- a/src/App.css
+++ b/src/App.css
@@ -40,25 +40,42 @@
 	font-family: Georgia, 'Times New Roman', Times, serif;
 	width: 100%;
 	bottom: 0%;
-	height: auto;
+	margin-top: 200px;
+	color: white;
 }
 .icons {
 	margin: 30px 50px;
 }
 
-.cards {
-	background-color: #790252;
-	min-width: 250px;
-	max-width: 300px;
-	min-height: 300px;
-	color: white;
-	margin: auto;
-	margin-top: 100px;
-}
+
 .definition {
 	margin: 10px;
 	background-color: #241468;
 	color: white;
 	min-width: 500px;
 	max-height: auto;
+}
+
+.footerText{
+	font-weight: bold;
+}
+@media (max-width: 1100px) {
+	.footerText {
+		display: none;
+	}
+}
+
+.cardHeader{
+	background-color: white;
+	color: #241468;
+}
+
+.cards {
+	background-color: #241468;
+	color: white;
+	min-width: 250px;
+	max-width: 300px;
+	min-height: 300px;
+	margin: auto;
+	margin-top: 100px;
 }
