--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,11 @@
 	margin: auto;
 	margin-top: 100px;
 }
+.term{
+	font-size: 24px;
+	font-weight: 700;
+}
+.definition{
+	font-size: 20px;
+	font-weight: 500;
+}
