--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@
 }
 .main {
 	height: auto;
+	margin-bottom: 100px;
 }
 .footer {
 	position: fixed;
@@ -40,7 +41,7 @@
 	font-family: Georgia, 'Times New Roman', Times, serif;
 	width: 100%;
 	bottom: 0%;
-	margin-top: 200px;
+	margin-top: auto;
 	color: white;
 }
 .icons {
@@ -68,16 +69,26 @@
 .cardHeader{
 	background-color: white;
 	color: #241468;
+	margin: 0%;
 }
 
 .cards {
 	background-color: #241468;
 	color: white;
 	min-width: 250px;
-	max-width: 300px;
-	min-height: 300px;
+	max-width: 250px;
+	min-height: 350px;
+	max-height: 350px;
 	margin: auto;
-	margin-top: 100px;
+	margin-top: 50px;
+}
+.cardBody{
+	max-width: 300px;
+	overflow-y: auto;
+}
+.cardBody::-webkit-scrollbar {
+  width: 5px;
+  opacity: 0; 
 }
 .term{
 	font-size: 24px;
