Worked on input handling and checks if the user already searched the desired word to show an alert.

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,15 @@
 	height: auto;
 	margin-bottom: 100px;
 }
+
+.accordion-word-definition{
+	font-size: 20px;
+	font-weight: 800;
+}
+
+
+
+
 .footer {
 	position: fixed;
 	background-color: #241468;
