--- a/src/App.css
+++ b/src/App.css
@@ -33,16 +33,13 @@
 }
 .main {
 	height: auto;
-	margin-bottom: 100px;
+	margin: auto;
 }
 
-.accordion-word-definition{
+.accordion-word-definition {
 	font-size: 20px;
 	font-weight: 800;
 }
-
-
-
 
 .footer {
 	position: fixed;
@@ -50,13 +47,12 @@
 	font-family: Georgia, 'Times New Roman', Times, serif;
 	width: 100%;
 	bottom: 0%;
-	margin-top: auto;
+	margin-top: 200px;
 	color: white;
 }
 .icons {
 	margin: 30px 50px;
 }
-
 
 .definition {
 	margin: 10px;
@@ -66,7 +62,7 @@
 	max-height: auto;
 }
 
-.footerText{
+.footerText {
 	font-weight: bold;
 }
 @media (max-width: 1100px) {
@@ -75,7 +71,7 @@
 	}
 }
 
-.cardHeader{
+.cardHeader {
 	background-color: white;
 	color: #241468;
 	margin: 0%;
@@ -85,25 +81,25 @@
 	background-color: #241468;
 	color: white;
 	min-width: 250px;
-	max-width: 250px;
+	max-width: 300px;
 	min-height: 350px;
 	max-height: 350px;
 	margin: auto;
 	margin-top: 50px;
 }
-.cardBody{
+.cardBody {
 	max-width: 300px;
 	overflow-y: auto;
 }
 .cardBody::-webkit-scrollbar {
-  width: 5px;
-  opacity: 0; 
+	width: 5px;
+	opacity: 0;
 }
-.term{
+.term {
 	font-size: 24px;
 	font-weight: 700;
 }
-.definition{
+.definition {
 	font-size: 20px;
 	font-weight: 500;
 }
